--- a/app/src/main/res/layout/item_card_view.xml
+++ b/app/src/main/res/layout/item_card_view.xml
@@ -17,7 +17,7 @@
         android:padding="8dp">
 
         <ImageView
-            android:id="@+id/img_item_photo"
+            android:id="@+id/image"
             android:layout_width="116dp"
             android:layout_height="116dp"
             android:layout_marginBottom="4dp"
@@ -25,15 +25,15 @@
             android:src="@color/colorAccent"/>
 
         <TextView
-            android:id="@+id/tv_item_name"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="116dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
-            android:layout_toEndOf="@id/img_item_photo"
-            android:layout_toRightOf="@id/img_item_photo"
+            android:layout_toEndOf="@id/image"
+            android:layout_toRightOf="@id/image"
             android:textSize="16sp"
             android:textStyle="bold"
             android:tooltipText="Article Title"/>
