--- a/app/src/main/res/layout/item_card_view_article.xml
+++ b/app/src/main/res/layout/item_card_view_article.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginLeft="8dp"
     android:layout_marginTop="4dp"
     android:layout_marginRight="8dp"
-    android:layout_marginBottom="4dp"
-    card_view:cardCornerRadius="4dp">
+    android:layout_marginBottom="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="140dp"
-        android:padding="8dp">
+        android:padding="8dp"
+        tools:ignore="UselessParent">
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/image_article"
             android:layout_width="116dp"
             android:layout_height="116dp"
             android:layout_marginBottom="4dp"
@@ -26,30 +26,21 @@
             android:contentDescription="@string/todo" />
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/title_article"
             android:layout_width="match_parent"
             android:layout_height="116dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
-            android:layout_toEndOf="@id/image"
-            android:layout_toRightOf="@id/image"
+            android:layout_toEndOf="@id/image_article"
+            android:layout_toRightOf="@id/image_article"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:tooltipText="@string/article_title"/>
+            android:textColor="#000000"
+            android:tooltipText="@string/article_title"
+            tools:ignore="RtlHardcoded" />
 
-        <!--        <LinearLayout-->
-        <!--            android:id="@+id/layout_button"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_alignParentBottom="true"-->
-        <!--            android:layout_marginStart="16dp"-->
-        <!--            android:layout_marginLeft="16dp"-->
-        <!--            android:layout_toEndOf="@id/img_item_photo"-->
-        <!--            android:layout_toRightOf="@id/img_item_photo"-->
-        <!--            android:orientation="horizontal">-->
-        <!--        </LinearLayout>-->
     </RelativeLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
