--- a/app/src/main/res/layout/activity_detail_article.xml
+++ b/app/src/main/res/layout/activity_detail_article.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     tools:context=".DetailArticleActivity">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,4 +43,24 @@
                 android:textStyle="italic"
                 android:textColor="#C4C4C4" />
         </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/title_detail_article"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textAlignment="center"/>
+        <ImageView
+            android:id="@+id/img_view_detail"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
+        <TextView
+            android:textAlignment="inherit"
+            android:id="@+id/tv_desc_article_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 </ScrollView>
