--- a/app/src/main/res/layout/item_card_view_article.xml
+++ b/app/src/main/res/layout/item_card_view_article.xml
@@ -6,9 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginLeft="8dp"
-    android:layout_marginTop="4dp"
     android:layout_marginRight="8dp"
-    android:layout_marginBottom="4dp">
+    android:id="@+id/item_article_id">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,8 +21,7 @@
             android:layout_height="116dp"
             android:layout_marginBottom="4dp"
             android:scaleType="centerCrop"
-            android:src="@color/colorAccent"
-            android:contentDescription="@string/todo" />
+            android:src="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/title_article"
@@ -40,7 +38,6 @@
             android:textColor="#000000"
             android:tooltipText="@string/article_title"
             tools:ignore="RtlHardcoded" />
-
     </RelativeLayout>
 
 </LinearLayout>
