--- a/app/src/main/res/layout/fragment_tutorial.xml
+++ b/app/src/main/res/layout/fragment_tutorial.xml
@@ -1,18 +1,15 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context="com.greeve.greeve.ui.greeve.tutorial.TutorialFragment">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_heroes_article"
+            android:id="@+id/rv_heroes_tutorial"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_card_view_tutorial" />
-    </RelativeLayout>
 
-</ScrollView>
+</RelativeLayout>
