--- a/app/src/main/res/layout/item_card_view_shop.xml
+++ b/app/src/main/res/layout/item_card_view_shop.xml
@@ -13,9 +13,9 @@
 
     <RelativeLayout
         android:layout_width="170dp"
-        android:layout_height="wrap_content"
+        android:layout_height="240dp"
         android:padding="8dp"
-        android:gravity="center">
+        android:gravity="center_horizontal">
 
         <ImageView
             android:id="@+id/img_item_shop"
