--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -9,5 +9,6 @@
             android:id="@+id/rv_heroes_article"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="60dp"
             tools:listitem="@layout/item_card_view_article" />
 </RelativeLayout>
