--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -7,7 +7,7 @@
     tools:context="com.greeve.greeve.ui.greeve.tutorial.TutorialFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_heroes_tutorial"
+        android:id="@+id/rv_heroes_shop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_card_view_shop" />
