--- a/app/src/main/res/layout/item_card_view_tutorial.xml
+++ b/app/src/main/res/layout/item_card_view_tutorial.xml
@@ -63,6 +63,7 @@
             android:textAlignment="center"
             android:layout_marginBottom="12dp"/>
         <VideoView
+            android:id="@+id/vv_videos"
             android:layout_below="@+id/tv_title_videos"
             android:layout_width="match_parent"
             android:layout_height="180dp"/>
