--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,11 +10,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center_horizontal">
-        <FrameLayout
-            android:id="@+id/frame_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
 
             <ImageView
                 android:id="@+id/img_view_login"
@@ -32,8 +27,7 @@
                 android:text="@string/gv_login_title"
                 android:textColor="#000000"
                 android:textSize="28sp"
-                android:layout_gravity="bottom"/>
-        </FrameLayout>
+                android:layout_marginTop="24dp"/>
 
         <TextView
             android:id="@+id/tv_desc_login"
@@ -42,7 +36,7 @@
             android:text="@string/gv_login_desc"
             android:textAlignment="center"
             android:textSize="15sp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/lato_regular"/>
 
         <Button
@@ -52,7 +46,7 @@
             android:text="@string/sign_up_with_google"
             android:background="@drawable/btn_custom_login"
             android:textColor="#FFFFFF"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="36dp"
             android:fontFamily="@font/lato_regular"/>
     </LinearLayout>
 </ScrollView>
