--- a/app/src/main/res/layout/item_card_view_shop.xml
+++ b/app/src/main/res/layout/item_card_view_shop.xml
@@ -5,10 +5,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginBottom="4dp"
     card_view:cardCornerRadius="4dp">
 
     <RelativeLayout
@@ -32,6 +28,13 @@
             android:layout_below="@id/img_item_shop"
             android:textAlignment="center"
             android:textColor="#000000"/>
+        <TextView
+            android:id="@+id/tv_title_harga"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_title_shop"
+            android:textAlignment="center"
+            android:textColor="#FF5C00"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
