On branch master  Your branch is up to date with 'origin/master'.
 Changes to be committed:
	modified:   .gradle/5.4.1/executionHistory/executionHistory.bin
	modified:   .gradle/5.4.1/executionHistory/executionHistory.lock
	modified:   .gradle/5.4.1/fileHashes/fileHashes.bin
	modified:   .gradle/5.4.1/fileHashes/fileHashes.lock
	modified:   .gradle/5.4.1/javaCompile/classAnalysis.bin
	modified:   .gradle/5.4.1/javaCompile/javaCompile.lock
	modified:   .gradle/buildOutputCleanup/buildOutputCleanup.lock
	modified:   app/src/main/java/com/greeve/greeve/DetailArticleActivity.java
	modified:   app/src/main/java/com/greeve/greeve/DetailShopActivity.java
	modified:   app/src/main/java/com/greeve/greeve/adapters/ShopRecycleViewAdapter.java
	modified:   app/src/main/java/com/greeve/greeve/ui/greeve/shop/ShopFragment.java
	modified:   app/src/main/res/layout/activity_detail_article.xml
	modified:   app/src/main/res/layout/activity_detail_shop.xml
	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/layout/activity_detail_shop.xml
+++ b/app/src/main/res/layout/activity_detail_shop.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginHorizontal="20dp">
         <ImageView
             android:id="@+id/img_view_detail_shop"
             android:layout_width="match_parent"
