--- a/app/src/main/res/layout/activity_detail_article.xml
+++ b/app/src/main/res/layout/activity_detail_article.xml
@@ -47,6 +47,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:id="@+id/title_detail_article"
@@ -56,11 +58,15 @@
         <ImageView
             android:id="@+id/img_view_detail"
             android:layout_width="match_parent"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_height="200dp"/>
         <TextView
             android:textAlignment="inherit"
             android:id="@+id/tv_desc_article_detail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            />
     </LinearLayout>
 </ScrollView>
