--- a/app/src/main/res/layout/item_card_view_tutorial.xml
+++ b/app/src/main/res/layout/item_card_view_tutorial.xml
@@ -3,13 +3,14 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_tutorial"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="350dp"
+    android:layout_marginBottom="6dp"
     android:layout_gravity="center"
     card_view:cardCornerRadius="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <RelativeLayout
             android:id="@+id/rl_hero_tutorial"
             android:layout_width="match_parent"
@@ -26,11 +27,7 @@
                 android:id="@+id/profile_image"
                 android:layout_marginRight="16dp"
                 android:layout_marginEnd="16dp" />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
 
-            </LinearLayout>
             <TextView
                 android:id="@+id/tv_writer"
                 android:layout_width="match_parent"
@@ -58,10 +55,19 @@
             android:textSize="18sp"
             android:textAlignment="center"
             android:layout_marginBottom="12dp"/>
-        <VideoView
-            android:id="@+id/vv_videos"
-            android:layout_below="@+id/tv_title_videos"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"/>
+       <WebView
+           android:id="@+id/web_view_tutorial"
+           android:layout_below="@+id/tv_title_videos"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:text="[   ]"
+            android:background="@android:color/transparent"
+            android:textColor="#acacac"
+            android:id="@+id/btn_fullscreen"
+            />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
