Changes to be committed: 	modified:   app/src/main/java/com/greeve/greeve/DetailShopActivity.java 	modified:   app/src/main/java/com/greeve/greeve/models/Tutorial.java 	modified:   app/src/main/java/com/greeve/greeve/ui/greeve/shop/ShopFragment.java 	modified:   app/src/main/res/layout/activity_detail_shop.xml 	modified:   app/src/main/res/layout/fragment_shop.xml 	modified:   app/src/main/res/layout/item_card_view_shop.xml

--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -10,6 +10,7 @@
         android:id="@+id/rv_heroes_shop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="60dp"
         tools:listitem="@layout/item_card_view_shop" />
 
 </RelativeLayout>
