--- a/app/src/main/res/layout/activity_detail_shop.xml
+++ b/app/src/main/res/layout/activity_detail_shop.xml
@@ -85,24 +85,36 @@
                 android:text="Ukuran"/>
             <Button
                 android:id="@+id/btn_ukuran_satu"
-                android:layout_width="40dp"
+                android:layout_width="50dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="16dp"/>
+                android:layout_marginLeft="16dp"
+                android:text="XL"
+                android:background="@color/common_google_signin_btn_text_dark_default"
+                />
             <Button
                 android:id="@+id/btn_ukuran_dua"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="16dp"/>
+                android:layout_marginLeft="16dp"
+                android:text="L"
+                android:background="@color/common_google_signin_btn_text_dark_default"
+                />
             <Button
                 android:id="@+id/btn_ukuran_tiga"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="16dp"/>
+                android:layout_marginLeft="16dp"
+                android:text="M"
+                android:background="@color/common_google_signin_btn_text_dark_default"
+                />
             <Button
                 android:id="@+id/btn_ukuran_empat"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="16dp"/>
+                android:layout_marginLeft="16dp"
+                android:text="S"
+                android:background="@color/common_google_signin_btn_text_dark_default"
+                />
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="12dp"
@@ -120,12 +132,18 @@
                 android:id="@+id/btn_warna_satu"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="19dp"/>
+                android:layout_marginLeft="19dp"
+                android:text="Hitam"
+                android:background="@color/common_google_signin_btn_text_dark_default"
+                />
             <Button
                 android:id="@+id/btn_warna_dua"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="16dp"/>
+                android:layout_marginLeft="16dp"
+                android:text="Putih"
+                android:background="@color/common_google_signin_btn_text_dark_default"
+                />
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="12dp"
@@ -139,27 +157,16 @@
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:paddingLeft="16dp"
-                android:text="Ukuran"/>
+                android:text="Jumlah"/>
 
-            <Button
-                android:id="@+id/btn_kurang"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="11dp"
-                android:text="-"/>
-            <TextView
-                android:id="@+id/tv_jumlah_hasil"
+            <EditText
+                android:id="@+id/ed_jumlah_hasil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
+                android:layout_marginLeft="20dp"
                 android:text="1"
+                android:inputType="number"
                 android:textSize="18sp"/>
-            <Button
-                android:id="@+id/btn_tambah"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="11dp"
-                android:text="+"/>
         </LinearLayout>
 
         <TextView
@@ -180,7 +187,9 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp">
+                android:layout_marginBottom="8dp"
+
+                >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -191,8 +200,10 @@
                     android:id="@+id/tv_nilai_berat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="125gram"
-                    android:textColor="@android:color/black"/>
+                    android:text="125 gram"
+                    android:textColor="@android:color/black"
+                    android:layout_marginLeft="12dp"
+                    />
 
             </TableRow>
 
@@ -211,7 +222,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Baru"
-                    android:textColor="@android:color/black"/>
+                    android:textColor="@android:color/black"
+                    android:layout_marginLeft="12dp"
+                    />
 
             </TableRow>
 
@@ -230,7 +243,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sepatu"
-                    android:textColor="@android:color/black"/>
+                    android:textColor="@android:color/black"
+                    android:layout_marginLeft="12dp"
+                    />
             </TableRow>
             <TableRow
                 android:layout_width="match_parent"
@@ -247,7 +262,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Kemasan Bekas"
-                    android:textColor="@android:color/black"/>
+                    android:textColor="@android:color/black"
+                    android:layout_marginLeft="12dp"
+                    />
             </TableRow>
         </TableLayout>
         <TextView
@@ -262,9 +279,10 @@
             android:id="@+id/tv_desc_detail_shop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="asd"
+            android:text="Sepatu dengan kreatifitas tanpa batas"
             android:layout_marginLeft="16dp"/>
         <Button
+            android:id="@+id/btn_beli"
             android:layout_marginTop="12dp"
             android:text="Beli"
             style="@style/ButtonGeneral"/>
