--- a/app/src/main/res/layout/item_card_view_shop.xml
+++ b/app/src/main/res/layout/item_card_view_shop.xml
@@ -29,12 +29,14 @@
             android:layout_below="@id/img_item_shop"
             android:textAlignment="center"
             android:textColor="#000000"/>
+
         <TextView
             android:id="@+id/tv_title_harga"
+            android:layout_below="@+id/tv_title_shop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_title_shop"
             android:textAlignment="center"
+            android:text="2000"
             android:textColor="#FF5C00"/>
     </RelativeLayout>
 
